Project

General

Profile

Actions

Bug #41652

closed

rgw lc does not delete objects that do not have the same tags

Added by Or Friedmann over 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rgw
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

It is possible that object will have multiple tags more than the rule that applied on.

For example:

Example 4: Tag-based Filtering and Resulting Conflicting Lifecycle Actions

Suppose that you have the following lifecycle policy that has two rules, each specifying a tag filter:

Rule 1 specifies a tag-based filter (tag1/value1). This rule directs Amazon S3 to transition objects to the GLACIER storage class 365 days after creation.

Rule 2 specifies a tag-based filter (tag2/value2). This rule directs Amazon S3 to expire objects 14 days after creation.

The lifecycle configuration is shown following:

<LifecycleConfiguration>
<Rule>
<ID>Rule 1</ID>
<Filter>
<Tag>
<Key>tag1</Key>
<Value>value1</Value>
</Tag>
</Filter>
<Status>Enabled</Status>
<Transition>
<StorageClass>GLACIER<StorageClass>
<Days>365</Days>
</Transition>
</Rule>
<Rule>
<ID>Rule 2</ID>
<Filter>
<Tag>
<Key>tag2</Key>
<Value>value1</Value>
</Tag>
</Filter>
<Status>Enabled</Status>
<Expiration>
<Days>14</Days>
</Expiration>
</Rule>
</LifecycleConfiguration>
The policy is fine, but if there is an object with both tags, then S3 has to decide what to do. That is, both rules apply to an object and in effect you are directing Amazon S3 to perform conflicting actions. In this case, Amazon S3 expires the object 14 days after creation. The object is removed, and therefore the transition action does not come into play.

Object is not being deleted if not all tags exactly the same as in the rule.


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #45502: nautilus: rgw lc does not delete objects that do not have the same tagsResolvedNathan CutlerActions
Actions #1

Updated by Abhishek Lekshmanan over 4 years ago

  • Assignee set to Abhishek Lekshmanan
Actions #2

Updated by Abhishek Lekshmanan over 4 years ago

  • Assignee changed from Abhishek Lekshmanan to Or Friedmann
Actions #3

Updated by Abhishek Lekshmanan over 4 years ago

  • Status changed from New to 12
Actions #4

Updated by Patrick Donnelly over 4 years ago

  • Status changed from 12 to New
Actions #6

Updated by Or Friedmann about 4 years ago

  • Pull request ID set to 30151
Actions #7

Updated by Or Friedmann almost 4 years ago

  • Status changed from New to Pending Backport
  • Backport set to nautilus
Actions #8

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45502: nautilus: rgw lc does not delete objects that do not have the same tags added
Actions #9

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF