fix rgw lc does not delete objects that do not have exactly the same tags as the rule

It is possible that object will have multiple tags more than the rule that applied on.
Object is not being deleted if not all tags exactly the same as in the rule.

S3-tests: ceph/s3-tests#303
Fixes: https://tracker.ceph.com/issues/41652
Signed-off-by: Or Friedmann <ofriedma@redhat.com>
(cherry picked from commit ebb806ba83fa9d68f14194b1f9886f21f7195a3d)